option('RENDER_NVPR', type : 'boolean', value : true)
option('RENDER_NANOVG', type : 'boolean', value : true)
option('AUDIO_SDL', type : 'boolean', value : true)
option('VIDEO_FFMPEG', type : 'boolean', value : true)
option('SCRIPT_TCC', type : 'boolean', value : true)
option('ENABLE_AUDIO', type : 'boolean', value : true)
option('ENABLE_VIDEO', type : 'boolean', value : true)
option('ENABLE_SCRIPT', type : 'boolean', value : true)
